apps/play-manager-backend/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: play-manager-backend-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "dev-basic-auth"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Frame-Options "DENY" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
      add_header Referrer-Policy "no-referrer" always;
      add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
      add_header Content-Security-Policy "default-src 'self'; connect-src 'self' https://play-manager-api.julienprr.com;";
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev.play-manager-api.julienprr.com
        - www.dev.play-manager-api.julienprr.com
      secretName: ssl-cert-play-manager-backend
  rules:
    - host: dev.play-manager-api.julienprr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: play-manager-backend
                port:
                  number: 80
    - host: www.dev.play-manager-api.julienprr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: play-manager-backend
                port:
                  number: 80
